  should be inserted or not. It performs a syntax check instead and only inserts
  end if ruby reports a missing end keyword. This should improve the accuracy of
  the plugin
* Clicking on a file name in an output widget now prevents the tool widget from
  being hidden, as if the pin button were clicked
  
h3. Bug fixes

* Do not crash when closing with unsaved files

h2. Ruber 0.0.9

h3. Features

h2. Ruber 0.0.9

h3. Features

* It is now possible to have more than one open project at the same time
* When a project is active, only the editors associated with it are visibile
* Editors not associated with a project are visible only when there's no active
  project
* Made the Auto End plugin recognize some other keywords: @unless@, @for@, @while@,
  @until@ (the last two were already recognized when followed by a @do@)
  
h3. Bug fixes

* The RSpec plugin now correctly displays pending examples
* Fixed a crash when creating a new document and saving it as a ruby file while
  using the Syntax Checker plugin
  
h2. Ruber 0.0.8

h3. Features

* Added a new plugin: Auto End. As the name says, it automatically inserts @end@
  keywords after @module@, @class@, @if@... Its implementation is a bit naive at
  the moment (in particular, it doesn't know whether the current line is in the
  middle of a string or of a block comment), so it can insert @end@ in the wrong
  places. If it does, just Undo the last action and the end'll go away
* Changed the way you open a file in the editor from a tool widget without closing
  the tool widget itself. Now there's a little button on the right of the tool
  widget with a pin on it. Clicking on it prevents the widget being closed when
  clicking on a file name. This change was made because the Meta key is now used
  for something else
* When clicking on a file name while keeping the Meta key pressed, a new editor
  for the file is open (even if there was already one open). The new editor can